--- a/css/styles.css
+++ b/css/styles.css
@@ -8,48 +8,47 @@
     --bylan-primaryFont: #fff;
     --bylan-secondaryBg: #111827;
     --bylan-secondaryFont: #dedede;
+
+    --inputError: #ff3860;
+    --inputSuccess: #09c377;
 }
 
 * {  margin: 0; padding: 0; box-sizing: border-box; }
-
 body {  margin: 0 auto; color: var(--bylan-primaryFont); background-color: var(--bylan-primaryBg); font-family: sans-serif; }
-h1, h2  { text-align:left; padding: 20px 0; letter-spacing: 0.11em; text-transform: uppercase; width: 95%; }
+h1, h2  { padding: 20px 0; letter-spacing: 0.11em; text-transform: uppercase; }
 header > a,
 footer > a,
 img.logo { width: 80px; }
-header a:first-of-type img {padding-top: 10px; padding-bottom: 5px;}
-main { padding: 20px; width: 95%; }
-main > h1, main p.intro { margin: 0;}
+header a:first-of-type img { padding-top: 10px; padding-bottom: 5px;}
+main { margin-top:120px; padding: 0 20px;}
 ul { list-style-type: none; display: flex; justify-content: space-evenly; }
-
-div.loader {
-    content: url("../media/loader.gif");
-    margin: 0 auto;
-}
-
+div.loader { content: url("../media/loader.gif"); margin: 0 auto; }
+main.mainHome,
+main.mainAbout { min-width:300px; max-width: 1280px; }
 p.intro { padding-bottom: 40px; overflow: hidden; max-width: 71ch; line-height: 1.5em; }
-main { padding-top: 150px;}
+div.row-wrapper { display: block; flex-direction: column; }
+div.row { display: flex; flex-wrap: wrap; justify-content: left; padding-bottom: 60px; max-width: 100%; gap:20px; }
+div.row-item { background-color: var(--bylan-secondaryBg); }
 section { display: flex; flex-wrap: wrap; max-width: 100%; }
-section.socials { padding: 20px;}
-main div.row-item { background-color: var(--bylan-secondaryBg); }
-section.content, main div.row-item p { width: 100%; padding: 5px 0; text-align: center; }
-section.content, main div.row { max-width: 100%; display: flex; flex-wrap: wrap; gap:20px; padding-bottom: 60px; margin: 0;  }
-section.content, main div.left-align:last-of-type p { margin: 0; text-align: left; padding: 20px; line-height: 1.5em; max-width: 80ch; overflow: hidden; }
+main.mainAbout div.left-align:last-of-type p, section.content { padding: 20px; line-height: 1.5em; max-width: 80ch; overflow: hidden; }
 section.content, main div.row:last-of-type { max-width:620px; }
 
-div.row-wrapper { display: block; flex-direction: column; }
-section.socials-home { height:auto;}
-section.socials-home h2 { align-self: flex-start;}
-form { display: flex; flex-direction: column;}
+/* ABOUT PAGE */
+main.mainAbout div.row-item p { width: 100%; padding: 5px 0; text-align: center;  }
+main.mainAbout div.row:last-of-type p { text-align: left;}
 
 /*   BREAKPOINTS  */
 @media only screen and (max-width: 638px) {
-    main div.row-item { margin: 0 auto; }
-    main > h1, main > h2, main p.intro { text-align:center; margin: 0 auto;}
+    main h2 {width: 100%; text-align: center; }
+    div.row,
+    div.row-item,
+    main > h1, main > h2 { margin: 0 auto;}
+   /* h1, h2, p.intro { text-align: center;} /**/
 }
 
+/* Use to avoid row with 3 and 2 on about page */
 @media only screen and (min-width: 640px) {
-    section.content, main div.row { width: 700px; }
+  /*  section.content, main div.row { width: 700px; }  /**/
 }
 
 @media only screen and (min-width: 1280px) {
