--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,4 @@
+/* @formatter:off */
 .back {
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -14,10 +15,7 @@
     z-index: 999;
 }
 
-.back * {
-    color: var(--bylan-primaryFont);
-}
-
+.back * { color: var(--bylan-primaryFont); }
 /* FORM & SUCCESS MESSAGE STYLES */
 #form {
     row-gap: 15px;
@@ -28,10 +26,7 @@
     color: var(--bylan-primaryFont);
 }
 
-#form h1 {
-    text-align: center;
-}
-
+#form h1 { text-align: center; }
 #form button {
     padding: 10px;
     margin-top: 10px;
@@ -43,48 +38,16 @@
     cursor: pointer;
 }
 
-.input-field {
-    display: flex;
-    flex-direction: column;
-}
-
-.input-field input, textarea {
-    border: 2px solid var(--bylan-primaryBg);
-    border-radius: 4px;
-    display: inline-block;
-    font-size: 12px;
-    padding: 8px;
-}
-
-.input-field textarea {
-    max-width: 100%;
-}
-
+.input-field { display: flex; flex-direction: column; }
+.input-field input, textarea { border: 2px solid var(--bylan-primaryBg); border-radius: 4px; display: inline-block; font-size: 12px; padding: 8px; }
+.input-field textarea { max-width: 100%; }
 .input-field input:focus,
-.input-field textarea:focus {
-    outline: 0;
-}
-
-.input-field.success input, .input-field.success textarea {
-    border-color: var(--inputSuccess);
-}
-
-.input-field.error input, .input-field.error textarea {
-    border-color: var(--inputError);
-}
-
+.input-field textarea:focus { outline: 0; }
+.input-field.success input, .input-field.success textarea { border-color: var(--inputSuccess); }
+.input-field.error input, .input-field.error textarea { border-color: var(--inputError); }
 #form label,
-#form .error {
-    text-transform: uppercase;
-    letter-spacing: 0.08em;
-    padding-bottom: 5px;
-    font-size: 14px;
-}
-
-#form .error {
-    font-size: 12px;
-}
-
+#form .error { text-transform: uppercase; letter-spacing: 0.08em; padding-bottom: 5px; font-size: 14px; }
+#form .error { font-size: 12px; }
 .input-field .error {
     color: var(--inputError);
     font-size: 12px;
@@ -102,7 +65,6 @@
     #border: 1px solid red;
     width: 100vw;
     height: 300px;
-
 }
 
 #successMessage div {
@@ -119,15 +81,8 @@
 
 }
 
-#successMessage p {
-    line-height: 1.5em;
-    letter-spacing: 0.07em;
-}
-
-#successMessage strong {
-    letter-spacing: 0.07em;
-}
-
+#successMessage p { line-height: 1.5em; letter-spacing: 0.07em; }
+#successMessage strong { letter-spacing: 0.07em; }
 #successMessage a {
     background-color: var(--bylan-green);
     padding: 10px;
@@ -147,27 +102,12 @@
     box-shadow: 2px 2px var(--bylan-primaryBg);
 }
 
-input, select, textarea {
-    color: var(--bylan-primaryFont);
-}
-
-textarea:focus, input:focus {
-    color: var(--bylan-primaryFont);
-}
-
+input, select, textarea { color: var(--bylan-primaryFont); }
+textarea:focus, input:focus { color: var(--bylan-primaryFont); }
 .input-field input:focus,
-.input-field textarea:focus {
-    outline: 0;
-}
-
-.input-field.success input, .input-field.success textarea {
-    border-color: var(--inputSuccess);
-}
-
-.input-field.error input, .input-field.error textarea {
-    border-color: var(--inputError);
-}
-
+.input-field textarea:focus { outline: 0; }
+.input-field.success input, .input-field.success textarea { border-color: var(--inputSuccess); }
+.input-field.error input, .input-field.error textarea { border-color: var(--inputError); }
 main.contact-main {flex-direction: column; }
 div.row-form { background-color: var(--bylan-secondaryBg); display: flex; justify-content: left; text-align: left; }
 form.row-item { width: 100%; }
