--- a/css/slider.css
+++ b/css/slider.css
@@ -1,8 +1,5 @@
-body {
-    height: 80vh;
-    display: grid;
-    place-items: center;
-}
+/* @formatter:off */
+body { height: 100vh; display: grid; place-items: center; }
 
 .slider {
     width: 100%;
