ligger for langt etter.....

--- a/css/contact.css
+++ b/css/contact.css
@@ -24,6 +24,8 @@
     border-radius: 4px;
     font-size: 12px;
     color: var(--bylan-primaryFont);
+    min-width: 300px;
+    max-width: 550px;
 }
 
 #form h1 { text-align: center; }
@@ -102,13 +104,13 @@
     box-shadow: 2px 2px var(--bylan-primaryBg);
 }
 
-input, select, textarea { color: var(--bylan-primaryFont); }
+input, select, textarea { color: var(--bylan-primaryFont); background-color: var(--bylan-primaryBg); }
 textarea:focus, input:focus { color: var(--bylan-primaryFont); }
 .input-field input:focus,
 .input-field textarea:focus { outline: 0; }
 .input-field.success input, .input-field.success textarea { border-color: var(--inputSuccess); }
 .input-field.error input, .input-field.error textarea { border-color: var(--inputError); }
 main.contact-main {flex-direction: column; }
-div.row-form { background-color: var(--bylan-secondaryBg); display: flex; justify-content: left; text-align: left; }
+div.row-form { background-color: var(--bylan-secondaryBg); display: flex; justify-content: start; align-items: start; text-align: left; }
 form.row-item { width: 100%; }
 form > * {}
