--- a/css/contact.css
+++ b/css/contact.css
@@ -36,6 +36,9 @@
     color: var(--bylan-primaryFont);
     background-color: var(--bylan-green);
     border: none;
+    font-weight: bold;
+    letter-spacing: 0.02em;
+    font-size: 16px;
     border-radius: 4px;
     cursor: pointer;
 }
@@ -111,6 +114,22 @@ textarea:focus, input:focus { color: var(--bylan-primaryFont); }
 .input-field.success input, .input-field.success textarea { border-color: var(--inputSuccess); }
 .input-field.error input, .input-field.error textarea { border-color: var(--inputError); }
 main.contact-main {flex-direction: column; }
-div.row-form { background-color: var(--bylan-secondaryBg); display: flex; justify-content: start; align-items: start; text-align: left; }
+div.row-form { display: flex; justify-content: start; align-items: start; text-align: left; }
 form.row-item { width: 100%; }
-form > * {}
+
+
+main#mainContact #hideTitle { border:1px solid white;}
+main#mainContact, main#mainContact div#hideForm {width: 100%; }
+main#mainContact h1#hideTitle, main#mainContact p#hideText {text-align: center; width: 100%; }
+
+form#form { display: flex; flex-direction: column; gap:20px; min-width: 300px; width: 600px; background-color: var(--bylan-secondaryBg);}
+form#form div.input-field {}
+form#form div.input-field label { font-weight: bold;letter-spacing: 0.03em;font-size: 16px;}
+
+
+
+/*   BREAKPOINTS  */
+@media only screen and (max-width: 638px) {
+    main#mainContact, main#mainContact div#hideForm {margin: 0 auto; width: 100%; }
+}
+
