--- a/css/contact.css
+++ b/css/contact.css
@@ -62,7 +62,7 @@
 }
 
 #successMessage {
-    margin-top: 150px;
+    margin-top: 120px;
     display: flex;
     justify-items: center;
     justify-content: center;
@@ -114,22 +114,20 @@ textarea:focus, input:focus { color: var(--bylan-primaryFont); }
 .input-field.success input, .input-field.success textarea { border-color: var(--inputSuccess); }
 .input-field.error input, .input-field.error textarea { border-color: var(--inputError); }
 main.contact-main {flex-direction: column; }
-div.row-form { display: flex; justify-content: start; align-items: start; text-align: left; }
 form.row-item { width: 100%; }
 
 
-main#mainContact #hideTitle { border:1px solid white;}
-main#mainContact, main#mainContact div#hideForm {width: 100%; }
-main#mainContact h1#hideTitle, main#mainContact p#hideText {text-align: center; width: 100%; }
+div#hideForm.row-form {width: 100%; }
 
-form#form { display: flex; flex-direction: column; gap:20px; min-width: 300px; width: 600px; background-color: var(--bylan-secondaryBg);}
+h1#hideTitle, p#hideText.intro {text-align: center; max-width: 100%; }
+
+form#form { display: flex; flex-direction: column; gap:10px; min-width: 300px; width: 600px; background-color: var(--bylan-secondaryBg);}
 form#form div.input-field {}
-form#form div.input-field label { font-weight: bold;letter-spacing: 0.03em;font-size: 16px;}
+form#form div.input-field label { font-weight: bold;letter-spacing: 0.03em;font-size: 16px; line-height: 1.5em;}
 
 
 
 /*   BREAKPOINTS  */
 @media only screen and (max-width: 638px) {
-    main#mainContact, main#mainContact div#hideForm {margin: 0 auto; width: 100%; }
 }
 
