--- a/css/styles.css
+++ b/css/styles.css
@@ -18,14 +18,15 @@ body {  margin: 0 auto; color: var(--bylan-primaryFont); background-color: var(-
 h1, h2  { padding: 20px 0; letter-spacing: 0.11em; text-transform: uppercase; }
 header > a,
 footer > a,
-img.logo { width: 80px; }
+img.logo { width: 65px; }
 header a:first-of-type img { padding-top: 10px; padding-bottom: 5px;}
-main { margin-top:120px; padding: 0 20px;}
+main { margin-top:90px; padding: 0 20px;}
 ul { list-style-type: none; display: flex; justify-content: space-evenly; }
 div.loader { content: url("../media/loader.gif"); margin: 0 auto; }
 main.mainHome {padding: 0; margin: 0;}
 main.mainHome,
-main.mainAbout { min-width:300px; max-width: 1280px; }
+main.mainAbout,
+main#mainContact { min-width:300px; max-width: 1280px; }
 p.intro { padding-bottom: 40px; overflow: hidden; max-width: 71ch; line-height: 1.5em; }
 div.row-wrapper,
 div.row { display: flex; flex-wrap: wrap; flex-direction: row;}
@@ -48,12 +49,13 @@ main.mainAbout div.row-item:last-of-type p { text-align: left;}
     div.row,
     div.row-item,
     main > h1, main > h2 { margin: 0 auto;}
+
     /* h1, h2, p.intro { text-align: center;} /**/
 }
 
 /* Use to avoid row with 3 and 2 on about page */
 @media only screen and (min-width: 640px) {
-    main {margin: 120px auto 0 auto; }
+    main {margin: auto auto 0 auto; }
     main div.row { width: 700px; }  /**/
 }
 
@@ -63,4 +65,5 @@ main.mainAbout div.row-item:last-of-type p { text-align: left;}
 
 @media only screen and (min-width: 640px) {
     main div.row { max-width: 1300px; }
+    div#hideForm { max-width: 100%; }
 }
