--- a/css/slider.css
+++ b/css/slider.css
@@ -10,19 +10,8 @@ body { height: 100vh; display: grid; place-items: center; }
     /* overflow: hidden; */
 }
 
-.slide {
-    width: 100%;
-    height: 350px;
-    position: absolute;
-    transition: all 0.5s;
-}
-
-.slide img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
+.slide { width: 100%; height: 350px; position: absolute; transition: all 0.5s; }
+.slide img { width: 100%; height: 100%; object-fit: cover; }
 .btn {
     position: absolute;
     width: 40px;
@@ -36,16 +25,6 @@ body { height: 100vh; display: grid; place-items: center; }
     font-size: 18px;
 }
 
-.btn:active {
-    transform: scale(1.1);
-}
-
-.btn-prev {
-    top: 45%;
-    left: 2%;
-}
-
-.btn-next {
-    top: 45%;
-    right: 2%;
-}
+.btn:active { transform: scale(1.1); }
+.btn-prev { top: 45%; left: 2%; }
+.btn-next { top: 45%; right: 2%; }
