ligger for langt etter.....

--- a/css/head-foot-socials.css
+++ b/css/head-foot-socials.css
@@ -17,12 +17,12 @@ header.header-mobile span {
     text-align: right;
     display: flex;
     flex-direction: column;
-    padding: 0 20px;
+    padding: 0 10px;
     cursor: pointer;
     max-width: 90px;
 }
 
-header.header-mobile div#toggle-element {position: fixed;margin: 95px 0;width: 100%;direction: rtl;}
+header.header-mobile div#toggle-element {position: fixed;margin: 87px 0;width: 100%;direction: rtl;}
 header.header-mobile div#toggle-element > a {
     display: block;
     width: 100%;
@@ -41,7 +41,7 @@ header.header-desktop,
 div#toggle-element { display: none; }
 header.header-mobile span i { padding: 0 5px 5px 0; }
 header.header-mobile span strong { font-size: 13px; }
-header.header-mobile div#toggle-element > a { margin-bottom: 2px; background: var(--bylan-secondaryBg);}
+header.header-mobile div#toggle-element > a { margin-bottom: 1px; background: var(--bylan-secondaryBg);}
 header.header-mobile div#toggle-element > a:hover,
 header.header-mobile div#toggle-element > a.active {right:0; background: linear-gradient(90deg, rgb(55, 142, 157), rgb(175, 30, 148), rgb(97, 22, 123)); }
 
@@ -56,8 +56,8 @@ footer {text-align: center;}
 }
 
 /**** SOCIALS ****/
-div.socials { width: 100%; margin: 40px 0 80px 0; display: flex; justify-content: space-between;}
-
+div.socials { display: flex; justify-content: space-around;}
+div.socials div.row-item {background-color: transparent;}
 .socials-home h2 { align-self: flex-start;}
 
 .socials i { font-size: 2.3rem; filter: drop-shadow(1px 1px 5px rgba(0, 0, 0, 0.5)); transition: transform 500ms ease-out; }
@@ -105,29 +105,18 @@ div.socials { width: 100%; margin: 40px 0 80px 0; display: flex; justify-content
 }
 
 /**** FOOTER ****/
-footer {width: 100%;margin: 0;background-color: var(--bylan-secondaryBg);}
+footer { background-color: var(--bylan-secondaryBg); width:100%;}
+footer div.row {display: flex; flex-direction: row; justify-content: space-between; align-items:end; justify-items: center; }
+footer div.row-item { margin: 0; font-size: 14px; display:flex; flex-direction: column; width: 100%; height: 100%;}
 footer a:first-of-type,
-footer a:first-of-type img {display: flex;text-align: left;}
+footer a:first-of-type img {display: flex;text-align: left; justify-content: flex-start;}
 footer div.row a {font-weight: bolder;text-decoration: none;color: var(--bylan-primaryFont);}
-footer div.row {
-    width: 100%;
-    margin: 0;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-}
+
 
 footer div.row:first-of-type {padding: 10px 20px 0 0;}
-footer div.row div {text-align: left;line-height: 1.4em;}
-footer div.last-row {
-    font-size: 14px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+footer div.row-item:nth-child(2) {text-align: center; }
+footer div.row-item:last-child p a {justify-content: end; text-align: end; }
+
 
 @media only screen and (max-width: 680px) {
     footer div.row {
