--- a/css/styles.css
+++ b/css/styles.css
@@ -14,56 +14,56 @@
 }
 
 * {  margin: 0; padding: 0; box-sizing: border-box; }
-body {  margin: 0 auto; color: var(--bylan-primaryFont); background-color: var(--bylan-primaryBg); font-family: sans-serif; }
-h1, h2  { padding: 20px 0; letter-spacing: 0.11em; text-transform: uppercase; }
+body {  margin: 100px auto 0 auto; color: var(--bylan-primaryFont); background-color: var(--bylan-primaryBg); font-family: sans-serif; }
+main {margin: 0 auto; min-width: 300px; max-width: 1280px; }
+h1, h2  { padding: 40px; letter-spacing: 0.15em; line-height: 1.5em; text-transform: uppercase; }
+p { letter-spacing: 0.05em; line-height: 1.5em; padding: 20px;}
+h1,h2, p.intro, span {text-align: center; display: flex; justify-content: center; }
+p.intro span { overflow:hidden; width: 70%;}
 header > a,
 footer > a,
 img.logo { width: 65px; }
-header a:first-of-type img { padding-top: 10px; padding-bottom: 5px;}
-main { margin-top:90px; padding: 0 20px;}
+img.logo { padding-top: 10px; padding-bottom: 5px;}
 ul { list-style-type: none; display: flex; justify-content: space-evenly; }
 div.loader { content: url("../media/loader.gif"); margin: 0 auto; }
 main.mainHome {padding: 0; margin: 0;}
-main.mainHome,
-main.mainAbout,
-main#mainContact { min-width:300px; max-width: 1280px; }
-p.intro { padding-bottom: 40px; overflow: hidden; max-width: 71ch; line-height: 1.5em; }
-div.row-wrapper,
-div.row { display: flex; flex-wrap: wrap; flex-direction: row;}
-div.row { justify-content: left; padding-bottom: 60px; max-width: 100%; gap:20px; }
-div.row-dual { display: flex; flex-direction: row; justify-content: left; max-width: 100%; gap:20px; }
-div.row-item { background-color: var(--bylan-secondaryBg); }
-div.col-item { }
-section { display: flex; flex-wrap: wrap; max-width: 100%; }
-main.mainAbout div.left-align:last-of-type p { padding: 20px; line-height: 1.5em; max-width: 80ch; overflow: hidden; }
-main div.row:last-of-type { max-width:620px; }
+
+div.row { display: flex; flex-wrap: wrap; max-width: 100%; gap:20px; margin: 0 auto; justify-content: center; }
+div.row-item { flex:2;}
+
 
 /* ABOUT PAGE */
-main.mainAbout div.row-item p { width: 100%; padding: 5px 0; text-align: center;  }
-main.mainAbout div.row-item:last-of-type p { text-align: left;}
+main.mainAbout h2 { width: 100%; text-align: center; }
+main.mainAbout .row-item {height: fit-content; max-width: fit-content; background-color: var(--bylan-secondaryBg);}
+main.mainAbout div.row div.row-item p { width: 100%; padding: 5px 0; text-align: center;  }
 
-/*   BREAKPOINTS  */
+main.mainAbout div.row div.left-align { max-width: 700px;}
+main.mainAbout div.row div.left-align p { padding: 20px; line-height: 1.5em; width: 100%; overflow: hidden; text-align: center;}
+/*****************/
+
+
+
+
+/* */
+
+/*******   BREAKPOINTS  ********/
 @media only screen and (max-width: 638px) {
-    main {width: 90%;}
-    main h2 {width: 100%; text-align: center; }
-    div.row,
-    div.row-item,
-    main > h1, main > h2 { margin: 0 auto;}
-
-    /* h1, h2, p.intro { text-align: center;} /**/
+    p.intro span { width: 95%;}
+    main.mainAbout div.row div.left-align { max-width: 1280px; height: fit-content;}
+    main.mainAbout div.row div.left-align p { padding: 20px; line-height: 1.5em; max-width: 100%; overflow: hidden; text-align: center;}
 }
 
 /* Use to avoid row with 3 and 2 on about page */
 @media only screen and (min-width: 640px) {
-    main {margin: auto auto 0 auto; }
-    main div.row { width: 700px; }  /**/
+    div.row-item {}
+    /* main#mainAbout div.row {margin: 0 auto; width: 700px; }  /**/
 }
 
 @media only screen and (min-width: 1280px) {
-    main div.row { width: 1600px; }
+   /* main#mainAbout div.row { width: 1600px; } /**/
 }
 
 @media only screen and (min-width: 640px) {
-    main div.row { max-width: 1300px; }
+   /* main#mainAbout div.row { max-width: 1300px;  } /**/
     div#hideForm { max-width: 100%; }
 }
