--- a/css/slider.css
+++ b/css/slider.css
@@ -7,11 +7,11 @@ body { height: 100vh; display: grid; place-items: center; }
     height: 400px;
     position: relative;
     margin-top: 87px;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
-.slide { width: 100%; height: 350px; position: absolute; transition: all 0.5s; }
-.slide img { width: 100%; height: 100%; object-fit: cover; }
+.slide {width: 45%; height: 200px; position: absolute; transition: all 0.5s;}
+.inner-slide img { width: 100%; height: 100%; object-fit: cover; }
 .btn {
     position: absolute;
     width: 40px;
