--- a/css/partials.css
+++ b/css/partials.css
@@ -1,5 +1,10 @@
 /* @formatter:off */
-/**** HEADER ****/
+header, footer {
+    -webkit-box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.3);
+    box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.3);
+}
+
+/************************* HEADER *************************/
 header.header-mobile {
     min-width: 300px;
     overflow-x: hidden;
@@ -11,7 +16,7 @@ header.header-mobile {
 }
 
 header.header-mobile,
-header.header-mobile div.section {background: var(--bylan-secondaryBg);display: flex;position: fixed;z-index: 222;}
+header.header-mobile div.section {background: var(--bylan-secondaryBg);display: flex;position: fixed;z-index: 999;}
 header.header-mobile div.section {justify-content: space-between;align-items: center;min-width: 100%;}
 header.header-mobile span {
     text-align: right;
@@ -22,8 +27,9 @@ header.header-mobile span {
     max-width: 90px;
 }
 
-header.header-mobile div#toggle-element {position: fixed;margin: 87px 0;width: 100%;direction: rtl;}
-header.header-mobile div#toggle-element > a {
+header.header-mobile div#toggle-element {z-index: 1000; position: fixed;margin: 84px 0;width: 100%;direction: rtl;}
+header.header-mobile div#toggle-element a {
+    z-index: 1000;
     display: block;
     width: 100%;
     padding: 20px;
@@ -41,9 +47,9 @@ header.header-desktop,
 div#toggle-element { display: none; }
 header.header-mobile span i { padding: 0 5px 5px 0; }
 header.header-mobile span strong { font-size: 13px; }
-header.header-mobile div#toggle-element > a { margin-bottom: 1px; background: var(--bylan-secondaryBg);}
-header.header-mobile div#toggle-element > a:hover,
-header.header-mobile div#toggle-element > a.active {right:0; background: linear-gradient(90deg, rgb(55, 142, 157), rgb(175, 30, 148), rgb(97, 22, 123)); }
+header.header-mobile div#toggle-element a { margin-bottom: 1px; background: var(--bylan-secondaryBg);}
+header.header-mobile div#toggle-element a:hover,
+header.header-mobile div#toggle-element a.active {right:0; background: linear-gradient(90deg, rgb(55, 142, 157), rgb(175, 30, 148), rgb(97, 22, 123)); }
 
 header {margin-left: -10px;margin-right: -10px;}
 footer section {display: flex;flex-wrap: wrap; align-items: center;justify-content: center;}
@@ -55,22 +61,31 @@ footer {text-align: center;}
     }
 }
 
-/**** SOCIALS ****/
+/************************* FOOTER *************************/
+footer { background-color: var(--bylan-secondaryBg); width:100%;}
+footer div.row {display: flex; flex-direction: row; justify-content: space-between; align-items:end; justify-items: center; }
+footer div.row-item { margin: 0; font-size: 14px; display:flex; flex-direction: column; width: 100%; height: 100%;}
+footer a:first-of-type,
+footer a:first-of-type img {display: flex;text-align: left; justify-content: flex-start;}
+footer div.row a {font-weight: bolder;text-decoration: none;color: var(--bylan-primaryFont);}
+footer div.row:first-of-type {padding: 10px 20px 0 0;}
+footer div.row-item:nth-child(2) {text-align: center; }
+footer div.row-item:last-child p a {justify-content: end; text-align: end; }
+
+/************************* SOCIALS *************************/
 div.socials {padding:140px 0;  display: flex; justify-content: space-around;}
 div.socials div.row-item {background-color: transparent;}
 .socials-home h2 { align-self: flex-start;}
-
 .socials i { font-size: 2.3rem; filter: drop-shadow(1px 1px 5px rgba(0, 0, 0, 0.5)); transition: transform 500ms ease-out; }
 .socials i:hover { transform: translate(0px, -5px); filter: drop-shadow(6px 12px 1px rgba(0, 0, 0, 0.3));}
-
 .fa-facebook::before { content: "\f09a"; }
+
 .fa-facebook {
     background: linear-gradient(225deg, rgba(67,135,208,255) 0%, rgba(28,64,158,255) 100%);
     background-clip: border-box;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-
 .fa-instagram::before { content: "\f16d"; }
 .fa-instagram {
     background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
@@ -78,7 +93,6 @@ div.socials div.row-item {background-color: transparent;}
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-
 .fa-twitch::before { content: "\f1e8"; }
 .fa-twitch {
     background: linear-gradient(90deg, rgba(213,140,255,255) 0%, rgba(182,108,255,255) 20%, rgba(145,71,255,255) 100%);
@@ -86,7 +100,6 @@ div.socials div.row-item {background-color: transparent;}
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-
 .fa-youtube::before { content: "\f167"; }
 .fa-youtube {
     background: radial-gradient(circle, rgba(254,0,0,255) 0%, hsla(0, 81%, 37%, 1) 100%);
@@ -94,8 +107,6 @@ div.socials div.row-item {background-color: transparent;}
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-
-
 .fa-discord::before { content: "\f392"; }
 .fa-discord {
     background: linear-gradient(225deg, rgba(76,88,198,255) 0%, rgba(113,135,218,255) 100%);
@@ -104,20 +115,7 @@ div.socials div.row-item {background-color: transparent;}
     -webkit-text-fill-color: transparent;
 }
 
-/**** FOOTER ****/
-footer { background-color: var(--bylan-secondaryBg); width:100%;}
-footer div.row {display: flex; flex-direction: row; justify-content: space-between; align-items:end; justify-items: center; }
-footer div.row-item { margin: 0; font-size: 14px; display:flex; flex-direction: column; width: 100%; height: 100%;}
-footer a:first-of-type,
-footer a:first-of-type img {display: flex;text-align: left; justify-content: flex-start;}
-footer div.row a {font-weight: bolder;text-decoration: none;color: var(--bylan-primaryFont);}
-
-
-footer div.row:first-of-type {padding: 10px 20px 0 0;}
-footer div.row-item:nth-child(2) {text-align: center; }
-footer div.row-item:last-child p a {justify-content: end; text-align: end; }
-
-
+/************************* MEDIA QUERIES *************************/
 @media only screen and (max-width: 680px) {
     footer div.row {
         width: 95%;
