--- a/css/slider.css
+++ b/css/slider.css
@@ -1,30 +1,85 @@
 /* @formatter:off */
-body { height: 100vh; display: grid; place-items: center; }
-
-.slider {
-    width: 100%;
-    max-width: 100vw;
-    height: 400px;
-    position: relative;
-    margin-top: 87px;
-    overflow: hidden;
+body {
+    margin: 0 auto;
+    padding: 0;
 }
 
-.slide {width: 45%; height: 200px; position: absolute; transition: all 0.5s;}
-.inner-slide img { width: 100%; height: 100%; object-fit: cover; }
-.btn {
+#slider-loop {
+    position: relative; top: 90px; height: 40vh; overflow: hidden;
+    -webkit-box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.3);
+    box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.3);
+}
+.slide-pic { position: absolute; width: 100%; height: 100%; z-index: 500; }
+.slide-pic img {
+    object-fit: cover; width: 100%; pointer-events: none;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+.active { z-index: 500; }
+.slideInLeft { animation-name: animateInLeft; z-index: 500; }
+.slideInRight { animation-name: animateInRight; z-index: 500; }
+.slideOutLeft { transform: translateX(-100%); }
+.slideOutRight { transform: translateX(100%); }
+
+@keyframes animateInLeft {
+    0% { transform: translateX(-100%); }
+    100% { transform: translateX(0%); }
+}
+
+@keyframes animateInRight {
+    0% { transform: translateX(100%); }
+    100% { transform: translateX(0%); }
+}
+
+.slider-buttons {
     position: absolute;
-    width: 40px;
-    height: 40px;
-    padding: 10px;
-    border: none;
-    border-radius: 50%;
-    z-index: 10;
-    cursor: pointer;
-    background-color: #fff;
-    font-size: 18px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    z-index: 600;
 }
 
-.btn:active { transform: scale(1.1); }
-.btn-prev { top: 45%; left: 2%; }
-.btn-next { top: 45%; right: 2%; }
+.slider-back-btn,
+.slider-next-btn {
+    display: flex;
+    flex-direction: column;
+    #border: 2px solid black;
+    justify-content: center;
+    align-items: center;
+    background: var(--bylan-primaryBg);
+    font-size: 18px;
+    opacity: 0.7;
+    #border-radius: 40px;
+    width: 50px;
+    height: 20%;
+    transition: all 0.2s;
+    margin: 0;
+}
+
+.slider-back-btn:hover,
+.slider-next-btn:hover { transform: scale(1.1); opacity: 0.8; cursor: pointer; }
+.slide-overlay-text {
+    position: absolute;
+    display: flex;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    color: var(--bylan-primaryFont);
+    top: 0;
+    left: 0;
+    z-index: 700;
+    opacity: 1;
+}
+
+.slide-overlay-text .slide-header { font-size: 80px; font-weight: 800; }
+.slide-overlay-text .slide-text { text-align: center; font-size: 22px; line-height: 30px; color: var(--bylan-primaryFont); max-width: 30%; }
+.slider-next-icon,
+.slider-back-icon { color: var(--bylan-primaryFont); }
