--- a/css/styles.css
+++ b/css/styles.css
@@ -13,56 +13,74 @@
     --inputSuccess: #09c377;
 }
 
-* {  margin: 0; padding: 0; box-sizing: border-box; }
+* { font-family: sans-serif; margin: 0; padding: 0; box-sizing: border-box; }
 body {  margin: 90px auto 0 auto; color: var(--bylan-primaryFont); background-color: var(--bylan-primaryBg); font-family: sans-serif; }
 main {margin: 0 auto; min-width: 300px; max-width: 1280px; }
 h1, h2  { padding: 40px; letter-spacing: 0.15em; line-height: 1.5em; text-transform: uppercase; }
 p { letter-spacing: 0.05em; line-height: 1.5em; padding: 20px;}
 h1,h2, p.intro, span {text-align: center; display: flex; justify-content: center; }
 p.intro span { overflow:hidden; width: 70%;}
+* a { text-decoration: none; color: var(--bylan-primaryFont);}
 header > a,
 footer > a,
 img.logo { width: 65px; }
 img.logo { padding-top: 10px; padding-bottom: 5px;}
 ul { list-style-type: none; display: flex; justify-content: space-evenly; }
 div.loader { content: url("../media/loader.gif"); margin: 0 auto; }
-main.mainHome {padding: 0; margin: 0;}
+main.mainHome {padding: 0; margin: 100px 0 0 0;}
 div.row { display: flex; flex-wrap: wrap; max-width: 100%; gap:20px; margin: 0 auto; justify-content: center; }
 div.row-item { flex:2;}
 
-
 /* ABOUT PAGE */
-main.mainAbout h2 { width: 100%; text-align: center; }
-main.mainAbout .row-item {height: fit-content; max-width: fit-content; background-color: var(--bylan-secondaryBg);}
-main.mainAbout div.row div.row-item p { width: 100%; padding: 5px 0; text-align: center;  }
+main.main h2 { width: 100%; text-align: center; }
+main.main .row-item {height: fit-content; max-width: fit-content; background-color: var(--bylan-secondaryBg);}
+main.main div.row div.row-item p { width: 100%; padding: 5px 0; text-align: center;  }
 
-main.mainAbout div.row div.left-align { max-width: 700px; margin-bottom: 100px;}
-main.mainAbout div.row div.left-align p { padding: 20px; line-height: 1.5em; width: 100%; overflow: hidden; text-align: center;}
-/*****************/
-
-
-
-
-/* */
+main.main div.row div.left-align { max-width: 700px; margin-bottom: 100px;}
+main.main div.row div.left-align p { padding: 20px; line-height: 1.5em; width: 100%; overflow: hidden; text-align: center;}
+main p.back {
+    padding: 10px;
+    margin-top: 0;
+    margin-bottom: 20px;
+    width: fit-content;
+    color: var(--bylan-primaryFont);
+    background-color: var(--bylan-green);
+    border: none;
+    font-weight: bold;
+    letter-spacing: 0.02em;
+    font-size: 16px;
+    border-radius: 4px;
+    cursor: pointer;
+}
 
 /*******   BREAKPOINTS  ********/
 @media only screen and (max-width: 638px) {
     p.intro span { width: 95%;}
-    main.mainAbout div.row div.left-align { max-width: 1280px; height: fit-content;}
-    main.mainAbout div.row div.left-align p { padding: 20px; line-height: 1.5em; max-width: 100%; overflow: hidden; text-align: center;}
+    main.main div.row div.left-align { max-width: 1280px; height: fit-content;}
+    main.main div.row div.left-align p { padding: 20px; line-height: 1.5em; max-width: 100%; overflow: hidden; text-align: center;}
 }
 
-/* Use to avoid row with 3 and 2 on about page */
+/* use to avoid row with 3 and 2 items */
 @media only screen and (min-width: 640px) {
     div.row-item {}
-    /* main#mainAbout div.row {margin: 0 auto; width: 700px; }  /**/
+    /* main#main div.row {margin: 0 auto; width: 700px; }  /**/
 }
 
 @media only screen and (min-width: 1280px) {
-   /* main#mainAbout div.row { width: 1600px; } /**/
+   /* main#main div.row { width: 1600px; } /**/
 }
 
 @media only screen and (min-width: 640px) {
-   /* main#mainAbout div.row { max-width: 1300px;  } /**/
+   /* main#main div.row { max-width: 1300px;  } /**/
     div#hideForm { max-width: 100%; }
 }
+
+
+/* MATERIAL GOOGLE ICONS */
+.material-symbols-outlined {
+     font-variation-settings:
+             'FILL' 100,
+             'wght' 400,
+             'GRAD' 0,
+             'opsz' 48
+ }
